dogs mate patch

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+8.7 - 10/7/2024
+- Implemented patch for Dogs Mate (Continued)
+    - This allows for slugcats of different types to intermingle with each other
+    - This also allows lizards to crossbreed between themselves as well
+
 8.6 - 5/27/2024
 - Updated patch for A Dog Said... Animal Prosthetics 2
 
