--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+9.0 = 10/15/2024
+- Slugcats, Lizards, and Lantern Mice have custom skeletons
+- Slugcats and Lizards can now be used as pack animals
+
 8.7 - 10/7/2024
 - Implemented patch for Dogs Mate (Continued)
     - This allows for slugcats of different types to intermingle with each other
