--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+9.1 - 11/6/2024
+- The mushrooms now give the proper tolerance hediff instead of alochol (thanks Florence!)
+
 9.0 - 10/15/2024
 - Slugcats, Lizards, and Lantern Mice have custom skeletons
 - Slugcats and Lizards can now be used as pack animals
