--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,5 @@
 Scavenger Major Update:
-- Scavenger Pawns (using HAR)
+- Scavenger Pawns (using HAR or Big and Small)
 - Scavenger faction (consisting of Scav Pawns)
 - Blue lizards
 - Monks planting a karma flower on death (1% chance)
