--- a/Changelog
+++ b/Changelog
@@ -16,6 +16,8 @@
 - Removed Slugcat's unique ability to throw spears
 - Properly added 1.6 patch for A Dog Said... Animal Prosthetics 2 (it was there previously but was never being loaded, oops!)
 - Overall file size reduced about 2.2MB, Languages folder moved to Common root folder (for easier translation support)
+- Updated Steam workshop description (and moved all imgur embeds to postimg)
+- Harmony requirement
 
 10.1 - 6/27/2025
 - All scugs can crossbreed
