--- a/Changelog
+++ b/Changelog
@@ -2,10 +2,19 @@
 - Added iterator xenotype, iterator faction & mini-cans (Biotech only)
 - Added overseers
 - Added neuron flies
-- Added spears (multi-use) & explosive spears (single-use)
+- Added vulture, vulture king, and vulture mask
+- Added pole plant
+- Added centipedes
+- Added spiders
+
+12.0 - ??/??/2025
+- Added outskirts biome
 - Added slugcat xenotype (Biotech only)
+- Added worm grass
+- Added batflies
 - Added blue lizards
-- Added RJW and RNW support
+- Added white lizards
+- Added spears (multi-use) & explosive spears (single-use)
 
 11.0 - 11/29/2025
 - Added scavenger xenotype & scavenger faction (Biotech only)
