--- a/Changelog
+++ b/Changelog
@@ -15,6 +15,7 @@
 - Added blue lizards
 - Added white lizards
 - Added spears (multi-use) & explosive spears (single-use)
+- Reduced chance of karma flower event happening
 
 11.0 - 11/29/2025
 - Added scavenger xenotype & scavenger faction (Biotech only)
