--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,9 @@
 - Added blue lizards
 - Added RJW and RNW support
 
+11.1 - 12/6/2025
+- Scavenger genes are now inheritable, this *may* only apply to newly scavs.
+
 11.0 - 11/29/2025
 - Added scavenger xenotype & scavenger faction (Biotech only)
 - Added pearls and colored pearls
