--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,16 @@
 - Added blue lizards
 - Added RJW and RNW support
 
+11.2 - 12/28/2025
+- Scavenger genes updated:
+    - Removed "tox resistance"
+    - Added "cold weakness"
+    - Added "slow study"
+    - Added "awful mining"
+    - Added "poor intellectual"
+    - Added "poor cooking"
+The reasoning behind these changes is to zero out the metabolic efficiency on scavengers, but also to reinforce the scavenger's role as a pawn that fits perfectly into early-game tribal / medieval struggles
+
 11.1 - 12/6/2025
 - Scavenger genes are now inheritable, this *may* only apply to newly scavs.
 
