--- a/Changelog
+++ b/Changelog
@@ -26,6 +26,7 @@
     - Added "poor intellectual"
     - Added "poor cooking"
 The reasoning behind these changes is to zero out the metabolic efficiency on scavengers, but also to reinforce the scavenger's role as a pawn that fits perfectly into early-game tribal / medieval struggles
+- Lantern Mice can spawn in Glowforests if Odyssey is present
 
 11.1 - 12/6/2025
 - Scavenger genes are now inheritable, this *may* only apply to newly scavs.
